--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2015-riot": "^1.1.0",
     "lodash": "^4.15.0",
-    "riot": "^2.6.1"
+    "riot": "^2.6.1",
+    "whatwg-fetch": "^1.0.0"
   }
 }
